feat: 백엔드 TMDB 장르 판정 유틸 추가 및 관련 로직 통합, 프론트엔드 displayMediaType을 참조방식 변경 등
백엔드:
1. 공통
- TMDB 장르 기반 contentMediaType 판정 유틸 클래스 추가(GenreUtil.java)
2. 검색 기능
- 검색 조회 처리 시 TMDB 장르 기반 판정 → contentMediaType 설정 로직을 GenreUtil을 사용하여 공통화
3. 인물 기능
- 인물 응답 오브젝트에서 contentMediaTypeName 삭제 → contentMediaType 추가
- 인물 조회 처리 시 TMDB 장르 판정 유틸을 사용하여 contentMediaType을 설정하는 로직 추가

프론트엔드:
- MEDIA_TYPE 상수 삭제 → 백엔드에 가져온 displayMediaType 을 참조하는 getDisplayMediaType()을 사용하도록 변경
- Layout.tsx 에서 Outlet에 Suspense 적용하여 렌더링 성능 개선
- 홈 컴포넌트가 헤더의 초기화 훅 처리 이후에 렌더링 되도록 변경하여 초기 상태 보장
- 인물 컴포넌트에서 contentMediaTypeName 을 삭제하고 각각의 Credits 정보에서 contentMediaType을 가져오도록 변경
