# backend/content-hub-backend/content-hub/src/main/java/com/cjy/contenthub/person/controller/dto/PersonCreditsCrewDto.java
@@ -31,7 +31,7 @@ public class PersonCreditsCrewDto extends TmdbPersonCreditsCrewDto {
 	/** 에피소드 수 (TV Only) */
 	private int episodeCount;
 	
-	/** 컨텐츠 미디어 타입(이름) */
-	private String contentMediaTypeName;
+	/** 컨텐츠 미디어 타입 */
+	private String contentMediaType;
 
 }
